cmake_minimum_required(VERSION 3.23)
project(tasksDSA)

set(CMAKE_CXX_STANDARD 23)


add_executable(tasksDSA main.cpp 1/1/Main.cpp 1/1/Main.h 1/2/Main.cpp 1/2/Main.h TaskSelector.cpp TaskSelector.h Printer.cpp Printer.h Util/Input.h 1/3/Main.cpp 1/3/Main.h 1/4/Main.cpp 1/4/Main.h 1/5/Main.cpp 1/5/Main.h)
